--- a/.classpath
+++ b/.classpath
@@ -37,22 +37,22 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Kavindi/Downloads/itextpdf-5.5.9.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Kavindi/Downloads/commons-logging-1.3.4.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Kavindi/Downloads/jasperreports-spring-7.0.1.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/Kavindi/Downloads/jasperreports-fonts-7.0.1.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/Kavindi/Downloads/jasperreports-javaflow-7.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kavindi/Downloads/commons-logging-1.3.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kavindi/Downloads/commons-beanutils.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kavindi/Downloads/commons-digester3-3.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kavindi/Downloads/commons-collections4-4.5.0-M3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kavindi/Downloads/jackson-core-2.15.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kavindi/Downloads/jackson-annotations-2.15.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kavindi/Downloads/jackson-databind-2.15.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kavindi/Downloads/woodstox-core-5.0.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kavindi/Downloads/stax-api-1.0-2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kavindi/Downloads/stax2-api-4.2.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kavindi/Downloads/jackson-module-jaxb-annotations-2.9.9.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
